# notes_app

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
notes_server/: Cargo.toml
notes_server/src/: main.rs
public/: index.html
src/: App.test.js  Button.js  Button.tsx  Note.js  Note.tsx  NoteInput.tsx  NoteList.tsx  Notes.js  Notes.tsx  index.js  index.tsx
