[package]
name = "notes_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
sqlite = "0.30.4"
chrono = "0.4.24"
# r2d2 = "0.8"
# r2d2_sqlite = "0.21" # 0.21.0 blocked on sqlx sqlite update
# rusqlite = "0.28" # 0.28.0 blocked on sqlx sqlite update
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
